@@ -7,3 +7,4 @@
 Turox's price is too high.
 Dagger is "somewhat difficult to use" if one has 9 strength.
 Horn of bravery is useless.
+Wand of cloning is too frequent.
