@@ -35,6 +35,7 @@ Healing liquid penetrates chests.
 Mistresses like shields more than their whips.
 "You manage to hurt your left leg even more" (even though leg is not hurt)
 Headless zombies can eat.
+Broken thunder hammer emits light.
 While in read-mode player can find mines.
 Squares near should be redrawn when digged. (bad edge tiles)
 Creating doors doesn't update the lookmode description.
