@@ -6,11 +6,17 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+
+July 14 2003 Timo Kiviluoto <sonor@phpoint.fi>
+
+	* Monster invisibility works again correctly
+	* Fixed a small border tile bug
+
 July 14 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
 	* Bug related to multisquared characters corrected
 	* Now compiles with GCC again.
-	
+
 July 11 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Added border tiles to earth
